WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112319
Cannot select a canvas element at the beginning or the end of a document
https://bugs.webkit.org/show_bug.cgi?id=112319
Summary
Cannot select a canvas element at the beginning or the end of a document
Ryosuke Niwa
Reported
2013-03-13 21:10:00 PDT
Created
attachment 193057
[details]
Demo With the following markup, you can select the second canvas but not the first or the third canvas elements. <!DOCTYPE html> <html> <body> <canvas width="100" height="100" style="border: 1px solid black"></canvas> some text <canvas width="100" height="100" style="border: 1px solid black"></canvas> some more text <canvas width="100" height="100" style="border: 1px solid black"></canvas> </body> </html>
Attachments
Demo
(296 bytes, text/html)
2013-03-13 21:10 PDT
,
Ryosuke Niwa
no flags
Details
Fixes the bug
(4.88 KB, patch)
2013-03-13 23:41 PDT
,
Ryosuke Niwa
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-03-13 21:30:55 PDT
<
rdar://problem/13417656
>
Ryosuke Niwa
Comment 2
2013-03-13 23:41:26 PDT
Created
attachment 193075
[details]
Fixes the bug
Eric Seidel (no email)
Comment 3
2013-03-13 23:52:05 PDT
Comment on
attachment 193075
[details]
Fixes the bug OK.
Ryosuke Niwa
Comment 4
2013-03-13 23:54:38 PDT
Committed
r145788
: <
http://trac.webkit.org/changeset/145788
>
Justin Novosad
Comment 5
2013-05-31 10:56:45 PDT
(In reply to
comment #4
)
> Committed
r145788
: <
http://trac.webkit.org/changeset/145788
>
Just so you know, this patch caused a regression:
https://code.google.com/p/chromium/issues/detail?id=244289
We are likely to revert it in Blink, and look for an alternate solution. Cheers!
Stephen White
Comment 6
2013-06-05 07:33:47 PDT
FYI: this seems to break mouse up event handling on many canvas sites. See:
https://code.google.com/p/chromium/issues/detail?id=244289
. rniwa: was there a follow-up patch that fixed this issue?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug