Cannot select a canvas element at the beginning or the end of a document https://bugs.webkit.org/show_bug.cgi?id=112319

Reviewed by Eric Seidel.

Source/WebCore: 

The bug was caused by the editing code treating canvas element as if an empty inline element.
Treat it as an "atomic" element for the purpose of determining whether selection can have
an end point in it or not.

Test: editing/pasteboard/copy-paste-content-starting-and-ending-canvas.html

* html/HTMLCanvasElement.h:
(WebCore::HTMLCanvasElement::canContainRangeEndPoint): Added.

LayoutTests: 

Add a regression test to copy and paste a content with canvas elements.

* editing/pasteboard/copy-paste-content-starting-and-ending-canvas-expected.txt: Added.
* editing/pasteboard/copy-paste-content-starting-and-ending-canvas.html: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@145788 bbb929c8-8fbe-4397-9dbb-9b2b20218538