third_party/WebKit/Source/WebCore/html/HTMLCanvasElement.h
@@ -140,6 +140,8 @@ public:
 
     float deviceScaleFactor() const { return m_deviceScaleFactor; }
 
+    virtual bool canContainRangeEndPoint() const { return false; }
+
     virtual void reportMemoryUsage(MemoryObjectInfo*) const OVERRIDE;
 
 private:
